2009-12-05 Raul Mateos  <raulofpandora@gmail.com>

	* images/pandora.png, pandora_logo.jpg: Deleted old files.

	* images/image_problem: Change background with new logo.	

2009-12-04 Raul Mateos  <raulofpandora@gmail.com>

	* include/config_process.php: Solved notice when PHP < 5.3

	* general/header.php: Add some alts and title.

	* general/include/cluetip.css: Changed .gif to .png.

	* images/daarrow*.png: New files, converted from .gif files.

	* Changelog: Format dates.

2009-12-04  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/datos_agente.php: fix the bug when you have a large,
	very large list of data of module. And add the pagination.
	Fixes: 2908241

2009-12-04  Sancho Lerena <slerena@artica.es>

	* include/styles/pandora.css: Modified style for 3.0

	* images/pandora_textlogo.png,
	images/pandora_header_logo_enterprise.png, 
	images/custom_logo/none.png	
	images/custom_logo/sourceforge.png
	images/custom_logo/artica_logo.png
	images/header.jpg
	images/pandora_header_logo.png
	images/pandora_logo.png: New logos and background for 3.0 style.

	* general/login_page.php: Updated style.

	* general/logon_ok.php: Removed small bug in the audit log block.

	* general/header.php: Pandora logo is now in left, and custom logo 
	at right. 
	
	* include/functions_config.php: By default custom logo is "none"

2009-12-04  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/alerts/alert_templates.php: use the function to translate the
	seconds time to "human time" for time threshold.
	Fixes: 2905968

2009-12-03  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/estado_ultimopaquete.php: fix the column of data with
	a empty module string.
	Fixes: 2881181

2009-12-03  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_common.php: clean source code.
	* include/functions_reporting.php: fix the query to count bad modules for
	SLA.
	Fixes: 2908101

2009-12-03  Miguel de Dios  <miguel.dedios@artica.es>
