@@ -240,7 +240,7 @@ function install_step2() {
 			$res += check_extension("gettext","PHP gettext extension");
 			$res += check_include("PEAR.php","PEAR PHP Library");
 			$res += check_include("DB.php","PEAR:DB PHP Library");
-			$res += check_include("XML/RPC.php","PEAR XML/RPC.php PHP Library");
+			$res += check_include("XML/RPC.php","PEAR::XML_RPC PHP Library");
 			$res += check_exists ("/usr/bin/twopi","Graphviz Binary");
 
 			echo "</table>
